Updates to maven scripts and directory structure for day trader
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@293214 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/daytrader/project.properties
+++ b/sandbox/daytrader/project.properties
@@ -1,5 +1,7 @@
 maven.xdoc.date=left
-maven.multiproject.includes=components/*/*/project.xml
-maven.multiproject.war.includes=components/wars/*/project.xml
-maven.multiproject.ejb.includes=components/ejbs/*/project.xml
-maven.multiproject.ear.includes=components/ears/*/project.xml
+maven.multiproject.includes=modules/**/project.xml
+maven.multiproject.war.includes=modules/web/project.xml
+maven.multiproject.ejb.includes=modules/ejb/project.xml
+maven.multiproject.ear.includes=modules/ear/project.xml
+maven.multiproject.streamer.includes=modules/streamer/project.xml
+maven.multiproject.jar.includes=modules/core/project.xml,modules/wsappclient/project.xml
