Progress with corba.  Copying  src/plan/magicgball-corba-nosec-plan.xml over  src/plan/magicgball-corba-plan.xml should work.  Added goals to maven.xml to run client etc.  SSL still does not work
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@306532 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/magicGball/src/webapp/WEB-INF/web.xml
+++ b/applications/magicGball/src/webapp/WEB-INF/web.xml
@@ -21,6 +21,6 @@
 		<ejb-ref-type>Session</ejb-ref-type>
 		<local-home>org.acme.MagicGBallLocalHome</local-home>
 		<local>org.acme.MagicGBallLocal</local>
-		<ejb-link>magicGball-ejb.jar#MagicGBall</ejb-link>
+		<ejb-link>magicGball-ejb-1.0-SNAPSHOT.jar#MagicGBall</ejb-link>
 	</ejb-local-ref>
 </web-app>
