Hacked a fix to avoid JNDI lookup problems at application initialization
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@307000 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/daytrader/modules/wsappclient/project.properties
+++ b/sandbox/daytrader/modules/wsappclient/project.properties
@@ -1,3 +1,2 @@
-cactus.src.mergewebxml = src/conf/cactus-web.xml
+maven.multiproject.type=jar
 maven.jar.manifest=src/client/META-INF/MANIFEST.MF
-cactus.is.ear=true
