--- a/sandbox/daytrader/modules/ejb/project.properties
+++ b/sandbox/daytrader/modules/ejb/project.properties
@@ -1,3 +1,1 @@
-maven.xdoc.date=left
-maven.ejb.src=${maven.build.dir}/xdoclet/ejb
-maven.eclipse.classpath.include=${maven.build.dir}/xdoclet/ejbdoclet
+maven.multiproject.properties=ejb
