--- a/sandbox/daytrader/modules/streamer/project.properties
+++ b/sandbox/daytrader/modules/streamer/project.properties
@@ -1,5 +1,2 @@
-maven.xdoc.date=left
-maven.ejb.src=${maven.build.dir}/xdoclet/ejb
-cactus.src.mergewebxml = src/conf/cactus-web.xml
-cactus.is.ear=true
+maven.multiproject.type=jar
 maven.jar.manifest=src/client/META-INF/MANIFEST.MF
