Initial checkin for GERONIMO-883
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@315020 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/security/src/test-data/data/login.config
+++ b/modules/security/src/test-data/data/login.config
@@ -3,41 +3,41 @@
  */
 
 FOO {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     host="localhost"
     port="4242"
     realm="properties-realm";
 };
 
 kerberos {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     host="localhost"
     port="4242"
     realm="TOOLAZYDOGS.COM";
 };
 
 sql {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     host="localhost"
     port="4242"
     realm="sql-realm";
 };
 
 properties {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     host="localhost"
     port="4242"
     realm="properties-realm";
 };
 
 kerberos-local {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     realm="TOOLAZYDOGS.COM"
     kernel="test.kernel";
 };
 
 bridge {
-    org.apache.geronimo.security.jaas.JaasLoginCoordinator required
+    org.apache.geronimo.security.jaas.client.JaasLoginCoordinator required
     realm="bridge-realm"
     kernel="test.kernel";
 };
