--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -80,7 +80,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
+            <param-value>org.apache.geronimo.console.certmanager.CertManagerPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
