Added xml configuration file
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@326901 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/directory/project.properties
+++ b/modules/directory/project.properties
@@ -4,3 +4,8 @@
 
 maven.junit.jvmargs=-Djava.endorsed.dirs=${maven.build.dir}/endorsed -ea 
 maven.junit.fork=true
+
+maven.eclipse.classpath.include=${basedir}/target/xmlbeans,${basedir}/target/xmlbeans-classes
+
+maven.idea.generated.source=xmlbeans
+
