--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.geronimo</groupId>
   <artifactId>geronimo</artifactId>
+  <packaging>pom</packaging>
   <name>Geronimo</name>
   <version>1.0-SNAPSHOT</version>
   <description>Geronimo parent</description>
