--- a/sandbox/freeorb/geronimo-orb/pom.xml
+++ b/sandbox/freeorb/geronimo-orb/pom.xml
@@ -2,7 +2,7 @@
 
     <parent>
         <groupId>org.apache.geronimo</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>geronimo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -29,6 +29,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>geronimo-spec</groupId>
+            <artifactId>geronimo-spec-corba</artifactId>
+            <version>2.3-rc4</version>
+        </dependency>      
 
     </dependencies>
 
