--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,24 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<!--
 
+    Copyright 2004 The Apache Software Foundation
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
+
+<!-- $Rev: 111629 $ $Date$ -->
+
+<project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.geronimo</groupId>
   <artifactId>geronimo</artifactId>
@@ -91,23 +110,23 @@
      | Geronimo specification versions
      |
      -->
-    <geronimoSpecActivationVersion>1.0-SNAPSHOT</geronimoSpecActivationVersion>
-    <geronimoSpecCorbaVersion>1.0-SNAPSHOT</geronimoSpecCorbaVersion>
-    <geronimoSpecEjbVersion>1.0-SNAPSHOT</geronimoSpecEjbVersion>
-    <geronimoSpecJ2eeVersion>1.0-SNAPSHOT</geronimoSpecJ2eeVersion>
-    <geronimoSpecJ2eeConnectorVersion>1.0-SNAPSHOT</geronimoSpecJ2eeConnectorVersion>
-    <geronimoSpecJ2eeDeploymentVersion>1.0-SNAPSHOT</geronimoSpecJ2eeDeploymentVersion>
-    <geronimoSpecJ2eeJaccVersion>1.0-SNAPSHOT</geronimoSpecJ2eeJaccVersion>
-    <geronimoSpecJ2eeManagementVersion>1.0-SNAPSHOT</geronimoSpecJ2eeManagementVersion>
-    <geronimoSpecJavamailVersion>1.0-SNAPSHOT</geronimoSpecJavamailVersion>
-    <geronimoSpecJaxrVersion>1.0-SNAPSHOT</geronimoSpecJaxrVersion>
-    <geronimoSpecJaxrpcVersion>1.0-SNAPSHOT</geronimoSpecJaxrpcVersion>
-    <geronimoSpecJmsVersion>1.0-SNAPSHOT</geronimoSpecJmsVersion>
-    <geronimoSpecJspVersion>1.0-SNAPSHOT</geronimoSpecJspVersion>
-    <geronimoSpecJtaVersion>1.0-SNAPSHOT</geronimoSpecJtaVersion>
-    <geronimoSpecQnameVersion>1.0-SNAPSHOT</geronimoSpecQnameVersion>
-    <geronimoSpecSaajVersion>1.0-SNAPSHOT</geronimoSpecSaajVersion>    
-    <geronimoSpecServletVersion>1.0-SNAPSHOT</geronimoSpecServletVersion>
+    <geronimoSpecActivationVersion>1.0.2-rc4</geronimoSpecActivationVersion>
+    <geronimoSpecCorbaVersion>2.3-rc4</geronimoSpecCorbaVersion>
+    <geronimoSpecEjbVersion>2.1-rc4</geronimoSpecEjbVersion>
+    <geronimoSpecJ2eeVersion>1.4-rc4</geronimoSpecJ2eeVersion>
+    <geronimoSpecJ2eeConnectorVersion>1.5-rc4</geronimoSpecJ2eeConnectorVersion>
+    <geronimoSpecJ2eeDeploymentVersion>1.1-rc4</geronimoSpecJ2eeDeploymentVersion>
+    <geronimoSpecJ2eeJaccVersion>1.0-rc5</geronimoSpecJ2eeJaccVersion>
+    <geronimoSpecJ2eeManagementVersion>1.0-rc4</geronimoSpecJ2eeManagementVersion>
+    <geronimoSpecJavamailVersion>1.3.1-rc6</geronimoSpecJavamailVersion>
+    <geronimoSpecJaxrVersion>1.0-rc4</geronimoSpecJaxrVersion>
+    <geronimoSpecJaxrpcVersion>1.1-rc4</geronimoSpecJaxrpcVersion>
+    <geronimoSpecJmsVersion>1.1-rc4</geronimoSpecJmsVersion>
+    <geronimoSpecJspVersion>2.0-rc4</geronimoSpecJspVersion>
+    <geronimoSpecJtaVersion>1.0.1B-rc4</geronimoSpecJtaVersion>
+    <geronimoSpecQnameVersion>1.1-rc4</geronimoSpecQnameVersion>
+    <geronimoSpecSaajVersion>1.1-rc4</geronimoSpecSaajVersion>
+    <geronimoSpecServletVersion>2.4-rc4</geronimoSpecServletVersion>
     <!--
      |
      | External dependency versions
@@ -262,24 +281,55 @@
 
   <distributionManagement>
     <repository>
-      <id>repo1</id>
-      <name>Maven Central Repository</name>
-      <url>scp://repo1.maven.org/home/projects/maven/repository-staging/to-ibiblio/maven2</url>
+      <id>apache-repo</id>
+      <name>Apache CVS Repository</name>
+      <url>scpexe://cvs.apache.org/www/cvs.apache.org/maven-snapshot-repository</url>
     </repository>
     <snapshotRepository>
-      <id>snapshots</id>
-      <name>Maven Central Development Repository</name>
-      <url>scp://repo1.maven.org/home/projects/maven/repository-staging/snapshots/maven2</url>
+      <id>apache-snapshots</id>
+      <name>Apache CVS Development Repository</name>
+      <url>scpexe://cvs.apache.org/www/cvs.apache.org/maven-snapshot-repository</url>
     </snapshotRepository>
     <site>
-      <id>website</id>
-      <url>scp://minotaur.apache.org/www/maven.apache.org/geronimo/</url>
+      <id>geronimo-website</id>
+      <url>scpexe://minotaur.apache.org/www/geronimo.apache.org/maven/</url>
     </site>
   </distributionManagement>
 
   <build>
     <sourceDirectory>src/java</sourceDirectory>
     <testSourceDirectory>src/test</testSourceDirectory>
+
+    <plugins>
+      <plugin>
+        <artifactId>maven-one-plugin</artifactId>
+        <executions>
+          <execution>
+            <configuration>
+              <remoteRepositoryUrl>scpexe://cvs.apache.org/www/cvs.apache.org/repository</remoteRepositoryUrl>
+            </configuration>
+            <goals>
+              <goal>install-maven-one-repository</goal>
+              <goal>deploy-maven-one-repository</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+    <extensions>
+      <extension>
+        <groupId>org.apache.maven.wagon</groupId>
+        <artifactId>wagon-ssh-external</artifactId>
+        <version>1.0-alpha-5</version>
+      </extension>
+    </extensions>
   </build>
 
+  <pluginRepositories>
+    <pluginRepository>
+      <id>snapshots</id>
+      <name>Maven Central Plugins Development Repository</name>
+      <url>http://snapshots.maven.codehaus.org/maven2</url>
+    </pluginRepository>
+  </pluginRepositories>
 </project>
