--- a/etc/project.properties
+++ b/etc/project.properties
@@ -51,7 +51,7 @@ maven.war.final.name=${pom.artifactId}-${pom.currentVersion}.war
 #####################################################
 # Web Container (jetty or tomcat)
 #####################################################
-#geronimo.web.container=tomcat
+# geronimo.web.container=tomcat
 geronimo.web.container=jetty
 
 # Force module tests to run, even if maven thinks they have passed
@@ -97,6 +97,7 @@ geronimo_spec_j2ee_management_version=1.0-rc4
 geronimo_spec_javamail_version=1.3.1-rc6
 geronimo_spec_jaxr_version=1.0-rc4
 geronimo_spec_jaxrpc_version=1.1-rc4
+geronimo_spec_jcache_version=1.0-rc1
 geronimo_spec_jms_version=1.1-rc4
 geronimo_spec_jsp_version=2.0-rc4
 geronimo_spec_jta_version=1.0.1B-rc4
