Eliminate a Pluto warning (GERONIMO-861)
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@331032 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-framework/src/webapp/WEB-INF/config/services/ConfigService.properties
+++ b/applications/console-framework/src/webapp/WEB-INF/config/services/ConfigService.properties
@@ -39,6 +39,7 @@ supported.windowstate = minimized
 portletcontainer.uniquename = pluto
 portletcontainer.entrance.impl = org.apache.pluto.PortletContainerImpl
 portletcontainer.entrance.wrapper.impl = org.apache.pluto.portalImpl.core.PortletContainerWrapperImpl
+portletcontainer.supportsBuffering = no
 
 servlet.insecure=/portal
 servlet.secure=/secure
