--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -237,6 +237,20 @@ limitations under the License.
     </servlet>
     <servlet>
         <description>Automated generated Portlet Wrapper</description>
+        <display-name>Pluto Wrapper for Database Wizard Portlet</display-name>
+        <servlet-name>DBWizard</servlet-name>
+        <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
+        <init-param>
+            <param-name>portlet-class</param-name>
+            <param-value>org.apache.geronimo.console.databasemanager.wizard.DatabasePoolPortlet</param-value>
+        </init-param>
+        <init-param>
+            <param-name>portlet-guid</param-name>
+            <param-value>console-standard.DBWizard</param-value>
+        </init-param>
+    </servlet>
+    <servlet>
+        <description>Automated generated Portlet Wrapper</description>
         <display-name>Pluto Wrapper for JMS ConnectionFactory Portlet</display-name>
         <servlet-name>JMSConnections</servlet-name>
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
@@ -731,6 +745,10 @@ limitations under the License.
     <servlet-mapping>
         <servlet-name>Databases</servlet-name>
         <url-pattern>/Databases/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DBWizard</servlet-name>
+        <url-pattern>/DBWizard/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SEUsers</servlet-name>
