--- a/sandbox/freeorb/geronimo-orb/pom.xml
+++ b/sandbox/freeorb/geronimo-orb/pom.xml
@@ -31,7 +31,7 @@
         </dependency>
 
         <dependency>
-            <groupId>geronimo-spec</groupId>
+            <groupId>org.apache.geronimo.specs</groupId>
             <artifactId>geronimo-spec-corba</artifactId>
             <version>2.3-rc4</version>
         </dependency>      
