--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 Copyright 2004 The Apache Software Foundation
 Licensed  under the  Apache License,  Version 2.0  (the "License");
 you may not use  this file  except in  compliance with the License.
-You may obtain a copy of the License at 
+You may obtain a copy of the License at
 
 http://www.apache.org/licenses/LICENSE-2.0
 
@@ -80,7 +80,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.certmanager.CertManagerPortlet</param-value>
+            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
@@ -263,7 +263,7 @@ limitations under the License.
             <param-value>console-standard.JMSConnections</param-value>
         </init-param>
     </servlet>
-    
+
    <servlet>
         <description>Automated generated Portlet Wrapper</description>
         <display-name>Pluto Wrapper for Gluecode SE Users Portlet</display-name>
@@ -294,7 +294,7 @@ limitations under the License.
         </init-param>
     </servlet>
 
-  
+
       <servlet>
         <description>Automated generated Portlet Wrapper</description>
         <display-name>Pluto Wrapper for Log Manager Portlet</display-name>
