GERONIMO-1108 Updated to use empty portlet instead of non-existant one
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@332440 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -171,7 +171,7 @@ limitations under the License.
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
         <init-param>
             <param-name>portlet-class</param-name>
-            <param-value>org.apache.geronimo.console.certmanager.CertManagerPortlet</param-value>
+            <param-value>org.apache.geronimo.console.EmptyPortlet</param-value>
         </init-param>
         <init-param>
             <param-name>portlet-guid</param-name>
