Modules for the rest of the current assembly plans. They now build for me
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@332950 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/console-jetty/project.properties
+++ b/configs/console-jetty/project.properties
@@ -21,13 +21,7 @@
 
 maven.multiproject.type=car
 
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car,geronimo/cars/jetty-deployer-${geronimo_version}.car
 
-geronimo.packaging.moduleFile=${maven.repo.local}/tranql/rars/tranql-connector-derby-embed-xa-${tranql_connector_version}.rar
+geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/ears/geronimo-console-${geronimo_version}.ear
 
-PlanHTTPPort=8080
-PlanHTTPSPort=8443
-PlanOpenEJBPort=4201
-PlanServerHostname=localhost
-PlanClientAddresses=127.0.0.1
-PlanRemoteLoginPort=4242
