--- a/configs/j2ee-corba/project.properties
+++ b/configs/j2ee-corba/project.properties
@@ -21,15 +21,13 @@
 
 maven.multiproject.type=car
 
-# just use basic GBean deployer
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car
 
 PlanCOSNamingHost=localhost
 PlanCOSNamingPort=1050
 PlanORBSSLHost=localhost
 PlanORBSSLPort=2001
 
-
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car
 
 PlanHTTPPort=8080
 PlanHTTPSPort=8443
