Clean up dependencies and make jetty welcome and uddi work
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@344852 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/welcome-jetty/project.properties
+++ b/configs/welcome-jetty/project.properties
@@ -21,5 +21,7 @@
 
 maven.multiproject.type=car
 
-geronimo.packaging.moduleFile=${maven.repo.local}/tranql/rars/tranql-connector-derby-embed-xa-${tranql_connector_version}.rar
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car,geronimo/cars/jetty-deployer-${geronimo_version}.car
+
+geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-welcome-${geronimo_version}.war
 
