--- a/configs/client-corba/project.properties
+++ b/configs/client-corba/project.properties
@@ -21,6 +21,8 @@
 
 maven.multiproject.type=car
 
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car
+
 PlanHTTPPort=8080
 PlanHTTPSPort=8443
 PlanOpenEJBPort=4201
