Initial work on a tomcat server.  Starts but won't serve pages
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@345166 13f79535-47bb-0310-9956-ffa450edef68

--- a/assemblies/j2ee-tomcat-server/project.properties
+++ b/assemblies/j2ee-tomcat-server/project.properties
@@ -19,9 +19,26 @@
 ## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
 ##
 
-maven.multiproject.type=car
+maven.multiproject.type=assembly
 
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car,geronimo/cars/tomcat-deployer-${geronimo_version}.car
-
-geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-welcome-${geronimo_version}.war
-
+PlanServerHostname=0.0.0.0
+PlanNamingPort=1099
+PlanOpenEJBPort=4201
+PlanClientAddresses=127.0.0.1
+PlanIIOPPort=9000
+PlanCOSNamingHost=localhost
+PlanCOSNamingPort=1050
+PlanORBSSLHost=localhost
+PlanORBSSLPort=2001
+PlanActiveMQPort=61616
+PlanDerbyPort=1527
+PlanRemoteLoginPort=4242
+PlanLdapPort=1389
+PlanJettyWebBuilderDefaultNamespace=http://geronimo.apache.org/xml/ns/j2ee/web/jetty-1.0
+PlanTomcatWebBuilderDefaultNamespace=http://geronimo.apache.org/xml/ns/j2ee/web/tomcat-1.0
+PlanHTTPPortPrimary=8080
+PlanHTTPSPortPrimary=8443
+PlanAJPPortPrimary=8009
+PlanHTTPPortSecondary=8090
+PlanHTTPSPortSecondary=8453
+PlanAJPPortSecondary=8019
