--- a/assemblies/j2ee-tomcat-server/src/var/security/demo_groups.properties
+++ b/assemblies/j2ee-tomcat-server/src/var/security/demo_groups.properties
@@ -1,6 +1,6 @@
 ##
 ##
-##   Copyright 2005 The Apache Software Foundation
+##   Copyright 2004 The Apache Software Foundation
 ##
 ##   Licensed under the Apache License, Version 2.0 (the "License");
 ##   you may not use this file except in compliance with the License.
@@ -15,13 +15,8 @@
 ##   limitations under the License.
 ##
 
-##
-## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
-##
-
-maven.multiproject.type=car
-
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car,geronimo/cars/tomcat-deployer-${geronimo_version}.car
-
-geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-welcome-${geronimo_version}.war
-
+manager=izumi
+it=alan
+pet=george,gracie,metro
+dog=george,gracie
+cat=metro
