need j2ee-deployer as well for login config builder
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@345684 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/j2ee-corba/project.properties
+++ b/configs/j2ee-corba/project.properties
@@ -27,6 +27,7 @@ PlanCOSNamingPort=1050
 PlanORBSSLHost=localhost
 PlanORBSSLPort=2001
 
+#j2ee-deployer needed for login config xml-reference builder
 geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car
 
 PlanHTTPPort=8080
