--- a/configs/j2ee-security/project.properties
+++ b/configs/j2ee-security/project.properties
@@ -21,8 +21,9 @@
 
 maven.multiproject.type=car
 
-# just use basic GBean deployer
-geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car
+
+#j2ee-deployer needed for login config xml-reference builder
+geronimo.packaging.deploymentConfig=geronimo/cars/geronimo-gbean-deployer-${geronimo_version}.car,geronimo/cars/j2ee-deployer-${geronimo_version}.car
 
 PlanHTTPPort=8080
 PlanHTTPSPort=8443
