Add a portlet to list, create, and edit security realms Fix SQL login module to work with PostgreSQL and use consistent column order   (GERONIMO-1206) SQL login module support database pools in addition to DriverManager   connections (GERONIMO-1202) Make some security GBeans implement interfaces and supply references to   each other to allow a caller to navigate them Change the LM constant from KERNEL to KERNEL_NAME to make it less confusing Fix the login module list to be in the correct order (GERONIMO-1205) Management API: J2EEServer can get you to ServerInfo and security realms,   JCAManagedConnectionFactory can get you a connection factory instance
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@345728 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/console-standard/src/webapp/WEB-INF/web.xml
+++ b/applications/console-standard/src/webapp/WEB-INF/web.xml
@@ -251,6 +251,20 @@ limitations under the License.
     </servlet>
     <servlet>
         <description>Automated generated Portlet Wrapper</description>
+        <display-name>Pluto Wrapper for Security Realm Wizard Portlet</display-name>
+        <servlet-name>RealmWizard</servlet-name>
+        <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
+        <init-param>
+            <param-name>portlet-class</param-name>
+            <param-value>org.apache.geronimo.console.securitymanager.realm.SecurityRealmPortlet</param-value>
+        </init-param>
+        <init-param>
+            <param-name>portlet-guid</param-name>
+            <param-value>console-standard.RealmWizard</param-value>
+        </init-param>
+    </servlet>
+    <servlet>
+        <description>Automated generated Portlet Wrapper</description>
         <display-name>Pluto Wrapper for JMS ConnectionFactory Portlet</display-name>
         <servlet-name>JMSConnections</servlet-name>
         <servlet-class>org.apache.pluto.core.PortletServlet</servlet-class>
@@ -749,6 +763,10 @@ limitations under the License.
     <servlet-mapping>
         <servlet-name>DBWizard</servlet-name>
         <url-pattern>/DBWizard/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RealmWizard</servlet-name>
+        <url-pattern>/RealmWizard/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SEUsers</servlet-name>
