--- a/assemblies/j2ee-tomcat-server/project.properties
+++ b/assemblies/j2ee-tomcat-server/project.properties
@@ -19,7 +19,7 @@
 ## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
 ##
 
-maven.multiproject.type=assembly
+maven.multiproject.type=assemble
 
 PlanServerHostname=0.0.0.0
 PlanNamingPort=1099
