--- a/etc/project.properties
+++ b/etc/project.properties
@@ -79,7 +79,7 @@ maven.xmlbeans2.sourcedir=${basedir}/src
 # Dependency Versions
 #####################################################
 activeio_version=2.0-r118
-activemq_version=3.2
+activemq_version=3.2.1
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.2-SNAPSHOT
@@ -110,7 +110,7 @@ antlr_version=2.7.2
 apacheds_version=0.9.2
 asm_version=1.4.3
 asn1_version=0.3.2
-axis_version=1.3
+axis_version=1.4-SNAPSHOT
 cglib_version=2.1_3
 castor_version=0.9.5.3
 commons_beanutils_version=1.6.1
