fix simple typo that didn't cause any problems
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@350173 13f79535-47bb-0310-9956-ffa450edef68

--- a/modules/assembly/project.properties
+++ b/modules/assembly/project.properties
@@ -14,7 +14,7 @@ geronimo.assembly.clean=true
 
 derby.system.home=${maven.build.dir}/${pom.groupId}-${pom.currentVersion}/var/derby
 
-geronimo.assembly.tar=flase
+geronimo.assembly.tar=false
 geronimo.assembly.zip=true
 geronimo.assembly.distributions.dir=${maven.build.dir}/distributions
 geronimo.assembly.name=${maven.final.name}
