Used emit option.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@351626 13f79535-47bb-0310-9956-ffa450edef68

--- a/sandbox/freeorb/geronimo-orb/pom.xml
+++ b/sandbox/freeorb/geronimo-orb/pom.xml
@@ -88,7 +88,7 @@
           </execution>
         </executions>
         <configuration>
-          <debug>true</debug>
+          <emit>all</emit>
           <packagePrefixes>
             <packagePrefix>
               <type>corba</type>
