Updated Tranql Vendors and connector to 1.1-SNAPSHOT and Ant to 1.6.5
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@351889 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -83,8 +83,8 @@ activemq_version=3.2.1
 geronimo_version=1.0-SNAPSHOT
 openejb_version=2.0-SNAPSHOT
 tranql_version=1.2-SNAPSHOT
-tranql_connector_version=1.0
-tranql_vendors_version=1.0
+tranql_connector_version=1.1-SNAPSHOT
+tranql_vendors_version=1.1-SNAPSHOT
 
 geronimo_spec_activation_version=1.0.2-rc4
 geronimo_spec_corba_version=2.3-rc4
@@ -105,7 +105,7 @@ geronimo_spec_qname_version=1.1-rc4
 geronimo_spec_saaj_version=1.1-rc4
 geronimo_spec_servlet_version=2.4-rc4
 
-ant_version=1.5
+ant_version=1.6.5
 antlr_version=2.7.2
 apacheds_version=0.9.2
 asm_version=1.4.3
