Move the DirectoryInitializationGBean.  Use it for the uddi db. Use a separate db for uddi. Clean up tomcat config file unpacking
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@354009 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/uddi-db/project.properties
+++ b/applications/uddi-db/project.properties
@@ -16,9 +16,7 @@
 ##
 
 ##
-## $Rev: 158417 $ $Date: 2005-03-20 23:25:45 -0800 (Sun, 20 Mar 2005) $
+## $Rev: 151530 $ $Date: 2005-02-05 15:47:24 -0800 (Sat, 05 Feb 2005) $
 ##
 
-maven.multiproject.type=car
-
-geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/tomcat-deployer/${geronimo_version}/car
+maven.multiproject.type=jar
