Updated etc/project.properties to include wsdl4j 1.5.2
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@354591 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/project.properties
+++ b/etc/project.properties
@@ -171,7 +171,7 @@ stax_api_version=1.0
 tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
 velocity_version=1.4
-wsdl4j_version=PATCH-1193602
+wsdl4j_version=1.5.2
 xerces_version=2.6.2
 xfire_version=20050202
 xml_apis_version=1.0.b2
