--- a/sandbox/freeorb/geronimo-orb/pom.xml
+++ b/sandbox/freeorb/geronimo-orb/pom.xml
@@ -64,6 +64,15 @@
             </goals>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>sun.jdk</groupId>
+            <artifactId>tools</artifactId>
+            <version>1.4.2</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+          </dependency>
+        </dependencies>
       </plugin>
       
       <plugin>
