GERONIMO-1299 Bump servlet/jsp example version number
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@354872 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/jsp-examples-jetty/project.properties
+++ b/configs/jsp-examples-jetty/project.properties
@@ -23,7 +23,7 @@ maven.multiproject.type=car
 
 geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_version}/car,geronimo/j2ee-deployer/${geronimo_version}/car,geronimo/jetty-deployer/${geronimo_version}/car
 
-geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-jsp-examples-tomcat-${tomcat_version}.war
+geronimo.packaging.moduleFile=${maven.repo.local}/geronimo/wars/geronimo-jsp-examples-tomcat-${tomcat_examples_version}.war
 
 
 
