--- a/etc/project.properties
+++ b/etc/project.properties
@@ -170,6 +170,7 @@ stax_version=1.1.1-dev
 stax_api_version=1.0
 tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
+tomcat_examples_version=5.5.12-1
 wadi_version=2.0-SNAPSHOT
 velocity_version=1.4
 wsdl4j_version=1.5.2
