--- a/etc/project.properties
+++ b/etc/project.properties
@@ -171,7 +171,8 @@ stax_api_version=1.0
 tomcat_ajp_version=5.5.12
 tomcat_version=5.5.12
 tomcat_examples_version=5.5.12-1
-wadi_version=2.0-SNAPSHOT
+wadi_version=2.0M1
+wadi_spring_version=1.2.5
 velocity_version=1.4
 wsdl4j_version=1.5.2
 xerces_version=2.6.2
