configure AJP13 listener for Jetty
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@354958 13f79535-47bb-0310-9956-ffa450edef68

--- a/configs/jetty/project.properties
+++ b/configs/jetty/project.properties
@@ -26,6 +26,7 @@ geronimo.packaging.deploymentConfig=geronimo/geronimo-gbean-deployer/${geronimo_
 
 PlanHTTPPort=8080
 PlanHTTPSPort=8443
+PlanAJPPort2=8019
 PlanOpenEJBPort=4201
 PlanServerHostname=localhost
 PlanClientAddresses=127.0.0.1
