--- a/applications/daytrader/modules/project.properties
+++ b/applications/daytrader/modules/project.properties
@@ -13,7 +13,7 @@
 #    limitations under the License.
 
 ##
-## $Rev: 264809 $ $Date: 2005-08-30 12:43:18 -0400 (Tue, 30 Aug 2005) $
+## $Rev$ $Date$
 ##
 
 # the directory containing the geronimo website in CVS
