build daytrader in applications
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@355313 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/daytrader/project.properties
+++ b/applications/daytrader/project.properties
@@ -6,6 +6,6 @@ maven.multiproject.ear.includes=modules/ear/project.xml
 maven.multiproject.streamer.includes=modules/streamer/project.xml
 maven.multiproject.jar.includes=modules/core/project.xml,modules/wsappclient/project.xml
 
-geronimo_version=1.0-SNAPSHOT
-activemq_version=3.2.1
+#geronimo_version=1.0-SNAPSHOT
+#activemq_version=3.2.1
 
