--- a/applications/project.properties
+++ b/applications/project.properties
@@ -19,9 +19,11 @@
 
 #multiproject properties
 maven.multiproject.includes=\
-*/project.xml
+*/project.xml,\
+daytrader/*/*/project.xml
 
 maven.multiproject.excludes=\
+daytrader/project.xml
 
 maven.idea.project.multiproject.includes=${maven.multiproject.includes}
 maven.idea.project.multiproject.excludes=${maven.multiproject.excludes}
