--- a/pom.xml
+++ b/pom.xml
@@ -110,23 +110,23 @@
      | Geronimo specification versions
      |
      -->
-    <geronimoSpecActivationVersion>1.0.2-rc4</geronimoSpecActivationVersion>
-    <geronimoSpecCorbaVersion>2.3-rc4</geronimoSpecCorbaVersion>
-    <geronimoSpecEjbVersion>2.1-rc4</geronimoSpecEjbVersion>
-    <geronimoSpecJ2eeVersion>1.4-rc4</geronimoSpecJ2eeVersion>
-    <geronimoSpecJ2eeConnectorVersion>1.5-rc4</geronimoSpecJ2eeConnectorVersion>
-    <geronimoSpecJ2eeDeploymentVersion>1.1-rc4</geronimoSpecJ2eeDeploymentVersion>
-    <geronimoSpecJ2eeJaccVersion>1.0-rc5</geronimoSpecJ2eeJaccVersion>
-    <geronimoSpecJ2eeManagementVersion>1.0-rc4</geronimoSpecJ2eeManagementVersion>
-    <geronimoSpecJavamailVersion>1.3.1-rc6</geronimoSpecJavamailVersion>
-    <geronimoSpecJaxrVersion>1.0-rc4</geronimoSpecJaxrVersion>
-    <geronimoSpecJaxrpcVersion>1.1-rc4</geronimoSpecJaxrpcVersion>
-    <geronimoSpecJmsVersion>1.1-rc4</geronimoSpecJmsVersion>
-    <geronimoSpecJspVersion>2.0-rc4</geronimoSpecJspVersion>
-    <geronimoSpecJtaVersion>1.0.1B-rc4</geronimoSpecJtaVersion>
-    <geronimoSpecQnameVersion>1.1-rc4</geronimoSpecQnameVersion>
-    <geronimoSpecSaajVersion>1.1-rc4</geronimoSpecSaajVersion>
-    <geronimoSpecServletVersion>2.4-rc4</geronimoSpecServletVersion>
+    <geronimoSpecActivationVersion>1.0-SNAPSHOT</geronimoSpecActivationVersion>
+    <geronimoSpecCorbaVersion>1.0-SNAPSHOT</geronimoSpecCorbaVersion>
+    <geronimoSpecEjbVersion>1.0-SNAPSHOT</geronimoSpecEjbVersion>
+    <geronimoSpecJ2eeVersion>1.0-SNAPSHOT</geronimoSpecJ2eeVersion>
+    <geronimoSpecJ2eeConnectorVersion>1.0-SNAPSHOT</geronimoSpecJ2eeConnectorVersion>
+    <geronimoSpecJ2eeDeploymentVersion>1.0-SNAPSHOT</geronimoSpecJ2eeDeploymentVersion>
+    <geronimoSpecJ2eeJaccVersion>1.0-SNAPSHOT</geronimoSpecJ2eeJaccVersion>
+    <geronimoSpecJ2eeManagementVersion>1.0-SNAPSHOT</geronimoSpecJ2eeManagementVersion>
+    <geronimoSpecJavamailVersion>1.0-SNAPSHOT</geronimoSpecJavamailVersion>
+    <geronimoSpecJaxrVersion>1.0-SNAPSHOT</geronimoSpecJaxrVersion>
+    <geronimoSpecJaxrpcVersion>1.0-SNAPSHOT</geronimoSpecJaxrpcVersion>
+    <geronimoSpecJmsVersion>1.0-SNAPSHOT</geronimoSpecJmsVersion>
+    <geronimoSpecJspVersion>1.0-SNAPSHOT</geronimoSpecJspVersion>
+    <geronimoSpecJtaVersion>1.0-SNAPSHOT</geronimoSpecJtaVersion>
+    <geronimoSpecQnameVersion>1.0-SNAPSHOT</geronimoSpecQnameVersion>
+    <geronimoSpecSaajVersion>1.0-SNAPSHOT</geronimoSpecSaajVersion>
+    <geronimoSpecServletVersion>1.0-SNAPSHOT</geronimoSpecServletVersion>
     <!--
      |
      | External dependency versions
@@ -221,82 +221,87 @@
        -->          
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-activation</artifactId>
+        <artifactId>geronimo-activation_1.0.2_spec</artifactId>
         <version>${geronimoSpecActivationVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-ejb</artifactId>
+        <artifactId>geronimo-corba_2.3_spec</artifactId>
+        <version>${geronimoSpecCorbaVersion}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.geronimo.specs</groupId>
+        <artifactId>geronimo-ejb_2.1_spec</artifactId>
         <version>${geronimoSpecEjbVersion}</version>
       </dependency>                        
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-j2ee</artifactId>
+        <artifactId>geronimo-j2ee_1.4_spec</artifactId>
         <version>${geronimoSpecJ2eeVersion}</version>
       </dependency>                        
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-j2ee-connector</artifactId>
+        <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
         <version>${geronimoSpecJ2eeConnectorVersion}</version>
       </dependency>                        
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-j2ee-deployment</artifactId>
+        <artifactId>geronimo-j2ee-deployment_1.1_spec</artifactId>
         <version>${geronimoSpecJ2eeDeploymentVersion}</version>
       </dependency>                        
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-j2ee-jacc</artifactId>
+        <artifactId>geronimo-j2ee-jacc_1.0_spec</artifactId>
         <version>${geronimoSpecJ2eeJaccVersion}</version>
       </dependency>                              
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-j2ee-management</artifactId>
+        <artifactId>geronimo-j2ee-management_1.0_spec</artifactId>
         <version>${geronimoSpecJ2eeManagementVersion}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-javamail</artifactId>
+        <artifactId>geronimo-javamail_1.3.1_spec</artifactId>
         <version>${geronimoSpecJavamailVersion}</version>
       </dependency>                                                
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-jaxr</artifactId>
+        <artifactId>geronimo-jaxr_1.0_spec</artifactId>
         <version>${geronimoSpecJaxrVersion}</version>
       </dependency>                                                
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-jaxrpc</artifactId>
+        <artifactId>geronimo-jaxrpc_1.1_spec</artifactId>
         <version>${geronimoSpecJaxrpcVersion}</version>
       </dependency>                                                
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-jsp</artifactId>
+        <artifactId>geronimo-jsp_2.0_spec</artifactId>
         <version>${geronimoSpecJspVersion}</version>
       </dependency>                                          
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-jms</artifactId>
+        <artifactId>geronimo-jms_1.1_spec</artifactId>
         <version>${geronimoSpecJmsVersion}</version>
       </dependency>                                    
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-jta</artifactId>
+        <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
         <version>${geronimoSpecJtaVersion}</version>
       </dependency>                                          
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-qname</artifactId>
+        <artifactId>geronimo-qname_1.1_spec</artifactId>
         <version>${geronimoSpecQnameVersion}</version>
       </dependency>            
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-saaj</artifactId>
+        <artifactId>geronimo-saaj_1.1_spec</artifactId>
         <version>${geronimoSpecSaajVersion}</version>
       </dependency>                  
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
-        <artifactId>geronimo-spec-servlet</artifactId>
+        <artifactId>geronimo-servlet_2.4_spec</artifactId>
         <version>${geronimoSpecServletVersion}</version>
       </dependency>            
       <!--
