--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <artifactId>geronimo</artifactId>
   <packaging>pom</packaging>
   <name>Geronimo</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <description>Geronimo parent</description>
   <url>http://geronimo.apache.org</url>
 
