--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,17 @@
     </extensions>
   </build>
 
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>Apache CVS</id>
+      <name>Apache CVS of the Central Repository</name>
+      <url>http://cvs.apache.org/maven-snapshot-repository</url>
+    </repository>
+  </repositories>
+
   <pluginRepositories>
     <pluginRepository>
       <id>snapshots</id>
